Attempt to fix tiles on mobile 5

--- a/src/Styles/Utilities.css
+++ b/src/Styles/Utilities.css
@@ -99,3 +99,7 @@
 .mobile-center {
     margin: auto;
 }
+
+.remove-margin {
+    margin: 0px;
+}
